--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p>This is new repo. </p>
 <p>This is a new branch</p>
 <p>This is a dropdown</p>
-<h1>This is the end.</h1>
+<h1 style="color: blue;">This is the end.</h1>
